--- a/CommunityMarket/app/src/main/res/layout/item_user_layout.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_user_layout.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/righteous"
         android:text="open market"
@@ -38,6 +39,8 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/parametre_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -50,7 +53,7 @@
         android:layout_marginEnd="24dp"
         android:ellipsize="end"
         android:fontFamily="@font/righteous"
-        android:lines="3"
+        android:lines="2"
         android:text="hello guys my name is yannick houdini"
         android:textColor="@color/blanc"
         android:textSize="@dimen/pub_dec_text_size"
