--- a/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
@@ -140,7 +140,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="16dp"
                     android:fontFamily="@font/righteous"
                     android:text="5000"
                     android:textColor="@color/orange"
@@ -151,7 +151,7 @@
                     app:layout_constraintHorizontal_bias="0.78"
                     app:layout_constraintStart_toEndOf="@+id/nouveaux_user_name"
                     app:layout_constraintTop_toTopOf="@+id/nouveaux_temps"
-                    app:layout_constraintVertical_bias="0.04000002" />
+                    app:layout_constraintVertical_bias="1.0" />
 
                 <TextView
                     android:id="@+id/nouveaux_tire"
@@ -198,16 +198,6 @@
                     app:layout_constraintStart_toStartOf="@+id/nouveaux_image_profile"
                     app:layout_constraintTop_toTopOf="@+id/nouveaux_image_profile"
                     app:layout_constraintVertical_bias="0.588" />
-
-                <ImageView
-                    android:id="@+id/imageView10"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintBottom_toTopOf="@+id/nouveaux_description_du_produit"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/nouveaute_image"
-                    app:srcCompat="@drawable/gradient_bg" />
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
