--- a/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
@@ -230,9 +230,9 @@
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="24dp"
                         android:fontFamily="@font/righteous"
-                        android:text="Parametre"
+                        android:text="@string/parametre_text"
                         android:textColor="@color/blanc"
-                        android:textSize="24sp"
+                        android:textSize="@dimen/pub_title_text_size"
                         android:textStyle="bold"
                         android:theme="@style/edit_theme"
                         app:layout_constraintStart_toStartOf="parent"
@@ -244,8 +244,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/nunito_bold"
-                        android:text="Dit en plus sur toi ..."
+                        android:text="@string/prarametre_dite_en_plus_text"
                         android:textColor="@color/blanc"
+                        android:textSize="@dimen/new_detail_desc_text_size"
                         app:layout_constraintEnd_toEndOf="@+id/parametre_text"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/parametre_text"
