--- a/CommunityMarket/app/src/main/res/layout/activity_chat_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_chat_message.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/righteous"
-        android:text="@string/pas_de_message"
+        android:text="@string/sell_empty_text"
         android:textColor="@color/blanc"
         android:textStyle="bold"
         android:visibility="invisible"
