--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -102,7 +102,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="Open market est votre nouveau partenaire en affaires , vendez partout au cameroun,sans frais.Inscrivez vous ,c'est simple et rapide."
+        android:text="@string/choice_intro_text"
         android:textAlignment="center"
         android:textColor="@color/blanc"
         android:textSize="@dimen/new_detail_desc_text_size"
@@ -117,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/righteous"
-        android:text="Join us now . "
+        android:text="@string/choice_rejoind_nous"
         android:textColor="@color/blanc"
         android:textSize="@dimen/new_detail_desc_text_size"
         app:layout_constraintEnd_toEndOf="parent"
