--- a/CommunityMarket/app/src/main/res/layout/activity_choice_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice_search.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/righteous"
-        android:text="what do you want to search ?"
+        android:text="@string/search_activity_que_voulez_vous"
         android:textAlignment="center"
         android:textColor="@color/blanc"
         android:textSize="18sp"
