--- a/CommunityMarket/app/src/main/res/layout/activity_vente_utilisateur.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_vente_utilisateur.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="vide "
+        android:text="@string/sell_empty_text"
         android:fontFamily="@font/righteous"
         android:textSize="@dimen/new_detail_text_size"
         android:textColor="@color/blanc"
