--- a/CommunityMarket/app/src/main/res/layout/item_user_layout.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_user_layout.xml
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/item_layout_name_widht"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
