--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -272,5 +272,6 @@
     <dimen name="card_start">40dp</dimen>
     <dimen name="card_top_button">8dp</dimen>
     <dimen name="open_sart_word">220dp</dimen>
+    <dimen name="item_layout_name_widht">290dp</dimen>
 
 </resources>
