--- a/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
@@ -280,5 +280,6 @@
     <dimen name="card_start">40dp</dimen>
     <dimen name="card_top_button">8dp</dimen>
     <dimen name="open_sart_word">62dp</dimen>
+    <dimen name="item_layout_name_widht">210dp</dimen>
 
 </resources>
