--- a/CommunityMarket/app/src/main/res/layout/new_version_layout.xml
+++ b/CommunityMarket/app/src/main/res/layout/new_version_layout.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
+
     <android.support.v7.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        app:cardCornerRadius="10dp"
+        android:layout_width="@dimen/nouveaute_card_width_height"
+
+        android:layout_height="wrap_content"
         android:elevation="8dp"
         app:cardBackgroundColor="@color/black"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,26 +20,26 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/image_pop_up"
                 android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:src="@drawable/shoes"
+                android:layout_height="@dimen/nouveaut_image_height"
                 android:background="@color/blanc"
                 android:scaleType="centerCrop"
+                android:src="@drawable/shoes"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text_pop_up"
-                android:layout_width="250dp"
+                android:layout_width="@dimen/nouveaute_test_desc"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/righteous"
-                android:text="une nouvelle version d'Open Markt est disponible , telecharger la . "
+                android:text="@string/new_version_text"
                 android:textAlignment="center"
                 android:textColor="@color/blanc"
                 android:textStyle="bold"
@@ -63,13 +63,15 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
+                android:layout_marginBottom="32dp"
                 android:background="@drawable/main_background"
                 android:fontFamily="@font/righteous"
                 android:text="compris"
                 android:textAllCaps="false"
                 android:textColor="@color/blanc"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_pop_up" />
