--- a/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
@@ -190,7 +190,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="14sp"
+                        android:textSize="@dimen/new_detail_desc_text_size"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
