--- a/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/post_user_prenom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/principal_start"
+                android:layout_marginStart="16dp"
                 android:layout_marginEnd="24dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/righteous"
@@ -62,6 +62,7 @@
                 android:theme="@style/ToolbarTheme"
                 app:layout_constraintBottom_toBottomOf="@+id/postImageUtilisateur"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/postImageUtilisateur"
                 app:layout_constraintTop_toTopOf="@+id/postImageUtilisateur"
                 app:layout_constraintVertical_bias="0.0" />
@@ -84,7 +85,7 @@
                 android:id="@+id/post_user_description"
                 android:layout_width="@dimen/principal_item_desc_text"
                 android:layout_height="@dimen/principal_desc_height"
-                android:layout_marginStart="@dimen/principal_image_round_start"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="@dimen/principal_prix_top_two"
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
@@ -94,6 +95,7 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/item_principal_desc"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.56"
                 app:layout_constraintStart_toEndOf="@+id/postImage"
                 app:layout_constraintTop_toBottomOf="@+id/post_userTemps" />
 
@@ -122,7 +124,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/principal_image_round_start"
                 android:layout_marginTop="@dimen/principal_prix_top_two"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="16dp"
                 android:fontFamily="@font/righteous"
                 android:text="@string/item_general"
                 android:textColor="@color/black"
