--- a/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/nouveaute_card_width_height"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="6dp"
     android:layout_marginRight="7dp"
@@ -12,12 +12,12 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/container"
-        android:layout_width="@dimen/nouveaute_card_width_height"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_nvx"
-            android:layout_width="@dimen/nouveaute_card_width_height"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="5dp"
             app:cardBackgroundColor="@color/blanc"
@@ -97,9 +97,7 @@
                     android:id="@+id/nouveaux_temps"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="4dp"
                     android:fontFamily="@font/nunito_bold"
                     android:text="17 juil 2019"
                     android:textSize="@dimen/new_detail_desc_text_size"
@@ -107,7 +105,8 @@
                     app:layout_constraintEnd_toEndOf="@+id/nouveaux_user_name"
                     app:layout_constraintHorizontal_bias="0.1"
                     app:layout_constraintStart_toStartOf="@+id/nouveaux_user_name"
-                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_user_name" />
+                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_user_name"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <ImageView
                     android:id="@+id/like_image"
