--- a/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
@@ -89,6 +89,7 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/item_principal_desc"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.29"
                 app:layout_constraintStart_toEndOf="@+id/post_image_vendeur"
                 app:layout_constraintTop_toBottomOf="@+id/nom_user" />
 
