--- a/CommunityMarket/app/src/main/res/layout/item_user_layout.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_user_layout.xml
@@ -38,6 +38,8 @@
         android:textColor="@color/blanc"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:lines="2"
+        android:ellipsize="end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
