--- a/CommunityMarket/app/src/main/res/layout/activity_publicity.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_publicity.xml
@@ -101,9 +101,10 @@
                     android:layout_marginEnd="24dp"
                     android:fontFamily="@font/righteous"
                     android:text=" le lorem Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500. "
-                    android:textSize="@dimen/pub_dec_text_size"
-                    android:textStyle="bold"
+                    android:textAlignment="center"
                     android:textColor="@color/blanc"
+                    android:textSize="@dimen/new_detail_desc_text_size"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
