--- a/CommunityMarket/app/src/main/res/layout/fragment_accesoire.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_accesoire.xml
@@ -11,7 +11,7 @@
     <ViewFlipper
         android:id="@+id/viewFlippertwo"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/fragment_slide_height"
         android:autoStart="true"
         android:flipInterval="4000"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,28 +22,28 @@
         <ImageView
             android:id="@+id/pubImage"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="@dimen/fragment_slide_height"
             android:scaleType="centerCrop" />
 
 
         <ImageView
             android:id="@+id/pubImageTwo"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="@dimen/fragment_slide_height"
             android:scaleType="centerCrop" />
 
 
         <ImageView
             android:id="@+id/pubImageThree"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="@dimen/fragment_slide_height"
             android:scaleType="centerCrop" />
 
 
         <ImageView
             android:id="@+id/pubImageFour"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="@dimen/fragment_slide_height"
             android:scaleType="centerCrop" />
 
 
