--- a/CommunityMarket/app/src/main/res/values-large/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-large/dimens.xml
@@ -263,5 +263,6 @@
     <dimen name="card_top_button">16dp</dimen>
     <dimen name="open_sart_word">110dp</dimen>
     <dimen name="item_layout_name_widht">260dp</dimen>
+    <dimen name="fragment_slide_height">120dp</dimen>
 
 </resources>
