--- a/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
@@ -281,5 +281,6 @@
     <dimen name="card_top_button">8dp</dimen>
     <dimen name="open_sart_word">62dp</dimen>
     <dimen name="item_layout_name_widht">210dp</dimen>
+    <dimen name="fragment_slide_height">110dp</dimen>
 
 </resources>
