--- a/CommunityMarket/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxhdpi/dimens.xml
@@ -259,5 +259,6 @@
     <dimen name="card_top_button">30dp</dimen>
     <dimen name="open_sart_word">62dp</dimen>
     <dimen name="item_layout_name_widht">210dp</dimen>
+    <dimen name="fragment_slide_height">120dp</dimen>
 
 </resources>
